--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <title>First order model</title>
+        <title>Alejo Restrepo </title>
         <!-- Bootstrap Core CSS -->
          <link href="css/bootstrap.min.css" rel="stylesheet" />
         <link href="css/bootstrap-social.css" rel="stylesheet" />
@@ -21,9 +21,9 @@
 <div>
 <!-- Marketing Icons Section -->
 <div class="row">
-		<h1 class="text-center"><b>First Order Motion Model for Image Animation</b></h1>
-		<h3 class="text-center"><i> Aliaksandr Siarohin, Stéphane Lathuilière, Sergey Tulyakov, Elisa Ricci and Nicu Sebe</i></h3>
-		<h4 class="text-center"> in NeurIPS 2019 </h4>
+		<h1 class="text-center"><b>3DOF Robotic arm with inverse kinematics</b></h1>
+		<h3 class="text-center"><i>Alejo Restrepo</i></h3>
+		<h4 class="text-center">2020</h4>
 
 </div>
     <div class="row">
@@ -31,17 +31,20 @@
 		<tr>
 		<td align=center width=50px>
 		<center>
-            <span style="font-size:24px"><a href='http://papers.nips.cc/paper/8935-first-order-motion-model-for-image-animation'>[Paper]</a></span>
+            <span style="font-size:24px"><a href='http://papers.nips.cc/paper/8935-first-order-motion-model-for-image-animation'>[Video]</a></span>
 		</center>
 		</td>
 		<td align=center width=50px>
 		<center>
-			<span style="font-size:24px"><a href='https://github.com/AliaksandrSiarohin/first-order-model'>[GitHub]</a></span>
+			<span style="font-size:24px"><a href='https://github.com/alerest285/alerest285.github.io'>[GitHub]</a></span>
 		</center>
 		</td>
 	</table>
 </div>
     <br/>
+	<video width="320" height="240" controls>
+        <source src="/home/alejo/Downloads/vokoscreen-2021-04-07_15-50-03.mp4" type="video/mp4">
+        </video>
 
     <div class="col-xs-12 col-md-8 col-md-8 col-sm-12 col-md-offset-2 col-lg-offset-2" align="center">
         <img class="img-responsive" src="teaser.png" style="max-width:70%;max-height:70%"
