--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<tr>
 		<td align=center width=50px>
 		<center>
-            <span style="font-size:24px"><a href='http://papers.nips.cc/paper/8935-first-order-motion-model-for-image-animation'>[Video]</a></span>
+            <span style="font-size:24px"><a href='https://www.youtube.com/watch?v=BGVK2FOS8_U'>[Video]</a></span>
 		</center>
 		</td>
 		<td align=center width=50px>
@@ -43,7 +43,7 @@
 </div>
     <br/>
 	<video width="320" height="240" controls>
-        <source src="vokoscreen-2021-04-07_15-50-03.mp4" type="video/mp4">
+        <source src="vokoscreen-2021-04-07_15-50-03%20(online-video-cutter.com).mp4" type="video/mp4">
         </video>
 
     <div class="col-xs-12 col-md-8 col-md-8 col-sm-12 col-md-offset-2 col-lg-offset-2" align="center">
