--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 	   </center>
 	  </td>
         </table>
-		
+	<video width="320" height="240" controls>
+	<source src="/home/alejo/Downloads/vokoscreen-2021-04-07_15-50-03.mp4" type="video/mp4">
+	</video>
 	</div>
 
 			
