--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<i>Alejo Restrepo</i>
 	</h3>
 	<h4>2021</h4>
+		
 	<table align=center width=300px>
 	 <tr>
 	  <td align=center width=50px>
@@ -31,9 +32,29 @@
 	   </center>
 	  </td>
         </table>
-	<video width="320" height="240" controls>
-	<source src="/home/alejo/Downloads/vokoscreen-2021-04-07_15-50-03.mp4" type="video/mp4">
-	</video>
+		
+		
+	<table align=center width=300px>
+	 <tr>
+	  <td align=center width=50px>
+	   <center>
+	    <span style="font-size:24px">
+	     <video width="320" height="240" controls>
+		<source src="/home/alejo/Downloads/vokoscreen-2021-04-07_15-50-03.mp4" type="video/mp4">
+	     </video>
+	    </span>
+	   </center>
+	  </td>
+		 
+	  <td align=center width=50px>
+	   <center>
+	    <span style="font-size:24px">
+		<a href='https://github.com/alerest285/alerest285.github.io'>[GitHub]</a>
+	    </span>
+	   </center>
+	  </td>
+        </table>
+		
 	</div>
 
 			
