--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-	     <video width="320" height="240" controls>
-		<source src="/home/alejo/Downloads/vokoscreen-2021-04-07_15-50-03.mp4" type="video/mp4">
+	     <video width="320" height="240" controls autoplay>
+		<source src="vokoscreen-2021-04-07_15-50-03 (online-video-cutter.com).mp4" type="video/mp4">
 	     </video>
 	    </span>
 	   </center>
