--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<i>Alejo Restrepo</i>
 	</h3>
 	<h4>2021</h4>
+        </div>
 		
 	<table align=center width=300px>
 	 <tr>
@@ -32,6 +33,7 @@
 	   </center>
 	  </td>
         </table>
+   
 		
 		
 	<table align=center width=300px>
@@ -49,13 +51,15 @@
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-		<a href='https://github.com/alerest285/alerest285.github.io'>[GitHub]</a>
+		<video width="320" height="240" controls autoplay>
+		<source src="vokoscreen-2021-04-07_15-50-03 (online-video-cutter.com).mp4" type="video/mp4">
+	     </video>
 	    </span>
 	   </center>
 	  </td>
         </table>
 		
-	</div>
+	
 
 			
 </body>
