--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-	     <img src="imager.jpeg" alt="Italian Trulli">
+	     <img src="images.jpeg" alt="3DOF Robot Arm">
 	    </span>
 	   </center>
 	  </td>
@@ -49,7 +49,7 @@
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-		<video width="320" height="240" controls autoplay>
+		<video width="300" height="200" autoplay="autoplay">
 		<source src="vokoscreen-2021-04-07_15-50-03 (online-video-cutter.com).mp4" type="video/mp4">
 	     </video>
 	    </span>
