--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-		<a href='https://github.com/alerest285/alerest285.github.io'>[GitHub]</a>
+		<a href='https://github.com/alerest285/3DOF-Robotic-Arm'>[GitHub]</a>
 	    </span>
 	   </center>
 	  </td>
@@ -49,7 +49,7 @@
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-		<video width="300" height="200" autoplay="autoplay">
+		<video width="300" height="200" controls ="autoplay">
 		<source src="vokoscreen-2021-04-07_15-50-03 (online-video-cutter.com).mp4" type="video/mp4">
 	     </video>
 	    </span>
