--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-		<video width="300" height="200" controls ="autoplay">
-		<source src="vokoscreen-2021-04-07_15-50-03 (online-video-cutter.com).mp4" type="video/mp4">
+		<video width="300" height="200" autoplay="autoplay">
+		<source src="3 DOF articulated robot arm with Cartesian coordinate control.mp4" type="video/mp4">
 	     </video>
 	    </span>
 	   </center>
