--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-		<video autoplay muted>
-                     <source src="<source src="3 DOF articulated robot arm with Cartesian coordinate control.mp4" type="video/mp4">" type="video/mp4" />
+		<video>
+                     <source src="<source src="3 DOF articulated robot arm with Cartesian coordinate control.mp4" type="video/mp4">" type="video/mp4"/>
                 </video>
 	    </span>
 	   </center>
