--- a/index.html
+++ b/index.html
@@ -49,13 +49,23 @@
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-		<video>
+		<video width="440px" loop="true" autoplay="autoplay" controls muted>
                      <source src="<source src="3 DOF articulated robot arm with Cartesian coordinate control.mp4" type="video/mp4">" type="video/mp4"/>
                 </video>
 	    </span>
 	   </center>
 	  </td>
         </table>
+	
+	<div class="col-md-8 col-md-8 col-sm-12 col-md-offset-2 col-lg-offset-2 text-justify">
+            <h2 class="text-center">Abstract</h2>
+            Image animation consists of generating a video sequence so that an object in a source image is animated according to the motion of a driving video.
+            Our framework addresses this problem without using any annotation or prior information about the specific object to animate.  Once trained on a set of videos depicting
+            objects of the same category (<i>e.g.</i> faces, human bodies), our method can be applied to any object of this class. To achieve this, we decouple appearance and motion
+            information using a self-supervised formulation.  To support complex motions, we use a representation consisting of a set of learned keypoints along with their
+            local affine transformations. A generator network models occlusions arising during target motions and combines the appearance extracted from the source image and
+            the motion derived from the driving video. Our framework scores best on diverse benchmarks and on a variety of object categories
+        </div>
 		
 	
 
