--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<i>Alejo Restrepo</i>
 	</h3>
 	<h4>2021</h4>
-        </div>
+       
 		
 	<table align=center width=300px>
 	 <tr>
@@ -49,7 +49,7 @@
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-		<video width="440px" loop="true" autoplay="autoplay" controls muted>
+		<video width="440px" controls muted>
                      <source src="<source src="3 DOF articulated robot arm with Cartesian coordinate control.mp4" type="video/mp4">" type="video/mp4"/>
                 </video>
 	    </span>
@@ -57,7 +57,7 @@
 	  </td>
         </table>
 	
-	<div class="col-md-8 col-md-8 col-sm-12 col-md-offset-2 col-lg-offset-2 text-justify">
+	
             <h2 class="text-center">Abstract</h2>
             Image animation consists of generating a video sequence so that an object in a source image is animated according to the motion of a driving video.
             Our framework addresses this problem without using any annotation or prior information about the specific object to animate.  Once trained on a set of videos depicting
