--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-		<video width="300" height="200">
+		<video width="300" height="200" controls>
                      <source src="3 DOF articulated robot arm with Cartesian coordinate control.mp4" type="video/mp4" type="video/mp4"/>
                 </video>
 	    </span>
@@ -69,7 +69,7 @@
 	
 	
 	
-	<div style="width:800px; margin:0 auto;" "text-align:justify">
+	<div style="width:800px; margin:0 auto; text-align:justify;">
             Image animation consists of generating a video sequence so that an object in a source image is animated according to the motion of a driving video.
             Our framework addresses this problem without using any annotation or prior information about the specific object to animate.  Once trained on a set of videos depicting
             objects of the same category (<i>e.g.</i> faces, human bodies), our method can be applied to any object of this class. To achieve this, we decouple appearance and motion
