--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ First, the Robots maximum range is designated by a circle with a radius of L1+L2
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-		<img src="IM_1.png" alt="Area Graphic for the maximum range of an unconstrained 2DOF Robot Arm">
+		<img src="IM_1.png" alt="Area Graphic for the maximum range of an unconstrained 2DOF Robot Arm" style="width:50px;height:50px;">
 	    </span>
 	   </center>
 	  </td>
