--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@ First, the Robots maximum range is designated by a circle with a radius of L1+L2
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-	     <img src="For_1.png" alt="Area Formula for the maximum range of an unconstrained 2DOF Robot Arm" style="width:40px;height:30px;">
+	     <img src="IM_1.png" alt="Area Graphic for the maximum range of an unconstrained 2DOF Robot Arm" style="width:100px;height:100px;">
 	    </span>
 	   </center>
 	  </td>
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-		<img src="IM_1.png" alt="Area Graphic for the maximum range of an unconstrained 2DOF Robot Arm" style="width:100px;height:100px;">
+		<img src="New Project (4) (1).jpg" alt="Area Graphic for the maximum range of a constrained 2DOF Robot Arm" style="width:100px;height:100px;">
 	    </span>
 	   </center>
 	  </td>
