--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@ With an area (B) in the upper semicircle of π L1^2 where it can not reach, and 
 If L1 >= L2, restrictions apply for another blindspot, a small circle of radius L1-L2, where the robot cannot reach. This circle has the same centerpoint 
 as the maximum range of the robot.
 
-Given a point D within the non-red area of the circle, a circle with radius L1 is formed with D as its centerpoint. A second circle with radius L2 is formed at the center of the maximum range, and the points where these two circles intersect is calculated. Depending on the rotation of the Robot arm, the right most intersect is selected as input for the algorithm.
+aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaGiven a point D within the non-red area of the circle, a circle with radius L1 is formed with D as its centerpoint. A second circle with radius L2 is formed at the center of the maximum range, and the points where these two circles intersect is calculated. Depending on the rotation of the Robot arm, the right most intersect is selected as input for the algorithm.
 
        </div>
-	<img src="code1.png" alt="Code for determining the left most intercept" style="width:100px;height:100px;">
+	<img src="code1.png" alt="Code for determining the left most intercept">
         
 		
 	
