--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
     <head>
         <meta charset="utf-8"/>
         <title>Robotic Arm</title>
+	   <style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
     </head>
 <body>
 	
