--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ img {
 	    The following method works for robot arms with two degrees of vertical freedom and one degree of horizontal freedom. It takes a given point within the Robots maximum range,
 	    and then uses trigonometry to calculate angles for both motors.
 
-First,eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee the Robots maximum range is designated by a circle with a radius of L1+L2.</div>
+First, the Robots maximum range is designated by a circle with a radius of L1+L2.</div>
 
 
 <table align=center width=300px>
