--- a/index.html
+++ b/index.html
@@ -117,11 +117,14 @@ Given a point D within the non-red area of the circle, a circle with radius L1 i
 
        </div>
 	<br>
+	<br>
+	<br>
 	<img src="code1.png" alt="Code for determining the left most intercept" class="center" style="width:810px;">
 	<div style="width:800px; margin:0 auto; text-align:justify;">
          Code for determining the left most intercept.
        </div>
 	
+	<br>
 	<br>
 	
 	
@@ -131,14 +134,15 @@ After the intersection point is measured, its  X and Y coordinates are used in t
 The final step is to calculate what angle a full-rotation motor would need to rotate to be parallel to the ground: an3 = an1 + math.acos((math.pow(d, 2) + math.pow(r0, 2) - math.pow(r1, 2)) / (2 * r0 * d)) * (180 / math.pi) + math.acos((pow(r1, 2) + math.pow(d, 2) - math.pow(r0, 2)) / (2 * r1 * d)) * (180 / math.pi).
 The code detects in what Quadrant point D is and adjusts the equations respectively.
        </div>
-	
+	<br>
+	<br>
 	<br>
 	<table align=center width=300px>
 	 <tr>
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-	     <img src="Q1.png" alt="3DOF Robot Arm">
+	     <img src="Q1.png" alt="3DOF Robot Arm" style="width:600px;">
 	    </span>
 	   </center>
 	  </td> 
