--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@ Given a point D within the non-red area of the circle, a circle with radius L1 i
 	<br>
 	<br>
 	<br>
-	<img src="code1.png" alt="Code for determining the left most intercept" class="center" style="width:810px;">
+	<img src="code1.png" alt="Code for determining the left most intercept" class="center" style="width:800px;">
 	<div style="width:800px; margin:0 auto; text-align:justify;">
-         Code for determining the left most intercept.
+        <i> Code for determining the left most intercept.</i>
        </div>
 	
 	<br>
@@ -142,14 +142,37 @@ The code detects in what Quadrant point D is and adjusts the equations respectiv
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-	     <img src="Q1.png" alt="3DOF Robot Arm" style="width:600px;">
+	     <img src="Q1.png" alt="Code for second Quadrant" style="width:650px;">
 	    </span>
 	   </center>
 	  </td> 
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-		<h2> Quadrant 1 </h1>
+		<h2> Quadrant 1 </h2>
+	    </span>
+	   </center>
+	  </td>
+        </table>
+	
+	
+	<br>
+	<br>
+	
+	
+	<table align=center width=300px>
+	 <tr>
+	  <td align=center width=50px>
+	   <center>
+	    <span style="font-size:24px">
+	     <img src="Q2.png" alt="Code for first Quadrant" style="width:650px;">
+	    </span>
+	   </center>
+	  </td> 
+	  <td align=center width=50px>
+	   <center>
+	    <span style="font-size:24px">
+		<h2> Quadrant 2 </h2>
 	    </span>
 	   </center>
 	  </td>
