--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@ The code detects in what Quadrant point D is and adjusts the equations respectiv
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-	     <img src="Q1.png" alt="Code for second Quadrant" style="width:650px;">
+	     <img src="Q1.png" alt="Code for first Quadrant" style="width:650px;">
 	    </span>
 	   </center>
 	  </td> 
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-		<h2> Quadrant 1 </h2>
+		<h2> Python code for a given Q1 point D, to calculate angles a1, a2 and a3 for the servo motors </h2>
 	    </span>
 	   </center>
 	  </td>
@@ -165,14 +165,14 @@ The code detects in what Quadrant point D is and adjusts the equations respectiv
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-	     <img src="Q2.png" alt="Code for first Quadrant" style="width:650px;">
+	     <img src="Q2.png" alt="Code for second Quadrant" style="width:650px;">
 	    </span>
 	   </center>
 	  </td> 
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-		<h2> Quadrant 2 </h2>
+		<p> <i>Python code for a given Q2 point D, to calculate angles a1, a2 and a3 for the servo motors</i></p>
 	    </span>
 	   </center>
 	  </td>
