--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ The code detects in what Quadrant point D is and adjusts the equations respectiv
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-		<h2> Python code for a given Q1 point D, to calculate angles a1, a2 and a3 for the servo motors </h2>
+		<p><i> Quadrant 1</i></p>
 	    </span>
 	   </center>
 	  </td>
@@ -172,7 +172,7 @@ The code detects in what Quadrant point D is and adjusts the equations respectiv
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-		<p> <i>Python code for a given Q2 point D, to calculate angles a1, a2 and a3 for the servo motors</i></p>
+		<p> <i>Quadrant 2</i></p>
 	    </span>
 	   </center>
 	  </td>
