--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@ The code detects in what Quadrant point D is and adjusts the equations respectiv
 	  </td>
         </table>
 	
-	
+	<br>
+	<br>
 	<div style="width:800px; margin:0 auto; text-align:justify;">
 The value of the angles is transmitted real time to the arduino via its serial port. 
 This communication has a delay of 10ms per instruction. The arduino recieves this 
@@ -205,9 +206,13 @@ sync with the port the Arduino is connected on,in this case it is connected port
         
 	<img src="graphic.png" alt="Arduino pin connection graphic" class="center" style="width:800px;">
 	<div style="width:800px; margin:0 auto; text-align:justify;">
-        <i> CArduino pin connection graphic.</i>
-		
-	<code>
+        <i> Arduino pin connection graphic.</i>
+		</div>
+
+	<br>
+	<br><br>
+	<br>
+<code>
 "#include <Servo.h>
 
 Servo servo0;
