--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@ sync with the port the Arduino is connected on,in this case it is connected port
 	<br>
 	<br><br>
 	<br>
-<code>
+	<div style="width:800px; margin:0 auto; text-align:justify;">
+<pre><code>
 "#include <Servo.h>
 
 Servo servo0;
@@ -248,11 +249,10 @@ void loop(){
   }
 }
 		
-		"
-		
-		
-		
-        </code>
+"	
+        </code></pre>
+	    
+	    </div>
 
 			
 </body>
