--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ as the maximum range of the robot.
 Given a point D within the non-red area of the circle, a circle with radius L1 is formed with D as its centerpoint. A second circle with radius L2 is formed at the center of the maximum range, and the points where these two circles intersect is calculated. Depending on the rotation of the Robot arm, the right most intersect is selected as input for the algorithm.
 
        </div>
+	<div style="width:800px; margin:0 auto; text-align:justify;">
 	<br>
 	<br>
 	<br>
@@ -209,6 +210,9 @@ combined voltage of 6V, is connected to the ground pin of the arduino. The follo
 a graphic of the pin connections to the microcontroller. The Python code needs to be in 
 sync with the port the Arduino is connected on,in this case it is connected port "/dev/ttyACM0".
        </div>
+	<br>
+	<br>
+	
         
 	<img src="graphic.png" alt="Arduino pin connection graphic" class="center" style="width:800px;">
 	<div style="width:800px; margin:0 auto; text-align:justify;">
