--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@ img {
 	
 	<table align=center width=300px>
 	 <tr>
-	  <td align=center width=50px>
+	  <td align=left width=50px>
 	   <center>
 	    <span style="font-size:24px">
 	     <a href='https://www.youtube.com/watch?v=BGVK2FOS8_U'>[Video]</a>
 	    </span>
 	   </center>
 	  </td>
-	  <td align=center width=50px>
+	  <td align=right width=50px>
 	   <center>
 	    <span style="font-size:24px">
 		<a href='https://github.com/alerest285/3DOF-Robotic-Arm'>[GitHub]</a>
