--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ bpoY = ((y0 + y1) / (2)) + (((y1 - y0) * (r0 ** 2 - r1 ** 2)) / (2 * (d ** 2))) 
 (2 * (x0 - x1) / (d ** 2) * area)		
 	
         </code></pre>
-        <i> Code for determining the left most intercept. (x0 and y0 are 0. y1 and x1 are the x and y coordinates of D.</i>
+        <i> Code for determining the left most intercept. (x0 and y0 are 0. y1 and x1 are the x and y coordinates of D.)</i>
        </div>
 	
 	<br>
