--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ img {
 	  <td align=center width=50px>
 	   <center>
 	    <span style="font-size:24px">
-	     <img src="images.jpeg" alt="3DOF Robot Arm">
+	     <img src="New Project (5).jpg" alt="3DOF Robot Arm">
 	    </span>
 	   </center>
 	  </td> 
